--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/layout/_widgets.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/layout/_widgets.scss
@@ -266,6 +266,7 @@
 
 				@include bb-rl-label-heading;
 				color: var(--bb-rl-text-secondary-color);
+				padding-left: var(--bb-rl-space-50);
 			}
 		}
 	}
